--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -98,15 +98,15 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 July 2003</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9754088729</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, Tamil Nadu, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B-Tech</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>spandanmukherjeegithub@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email-ID:</strong> <span>spandanmukherjeegithub@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Idea Discuss:</strong> <span>Always Available</span></li>
                 </ul>
               </div>
@@ -132,7 +132,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-linkedin"></i>
-              <span data-purecounter-start="0" data-purecounter-end="686" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="710" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Connections</strong> Still on a increase</p>
             </div>
           </div>
@@ -148,7 +148,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-twitter"></i>
-              <span data-purecounter-start="0" data-purecounter-end="160" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="170" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Tweets</strong> Technology and Ideas </p>
             </div>
           </div>
@@ -156,7 +156,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-person-workspace"></i>
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hackathons</strong> Participating in various tech competitions. </p>
             </div>
           </div>
@@ -228,9 +228,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">POSTER EDITING <i class="val">55%</i></span>
+              <span class="skill">Content and Designing <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -344,7 +344,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hackathon"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -354,7 +354,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hackathon"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details1.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -364,7 +364,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Self-Project"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -374,7 +374,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hackathon"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -384,7 +384,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Team Based"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details4.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -394,7 +394,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Self-Project"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details5.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -404,7 +404,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hackathon"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details6.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -414,7 +414,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Event Management"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details7.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -424,7 +424,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hackathon"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details8.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -531,19 +531,19 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  One of the friendliest person I've ever met. Instantly connected after our first conversation. He's really dedicated with his work and I have hopes from him.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Priyanshu Pattanaik</h3>
+                <h4>Web Developer & Innovator</h4>
               </div>
             </div> -->
-            <!-- End testimonial item -->
+            <!-- End testimonial item
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -592,9 +592,9 @@
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>9754088729</p>
+                <i class="bi bi-twitter"></i>
+                <h4>Twitter</h4>
+                <p>Magellanic_Tech</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7780.01749351094!2d80.1547265!3d12.8427111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5259a58da799fb%3A0x3bc484d22ce3b472!2sVIT%20UNIVERSITY%2C%20Tamil%20Nadu%20600048!5e0!3m2!1sen!2sin!4v1682804222093!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -603,7 +603,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="mailto:emailid@example.com" method="post" enctype="text/plain">
+            <form action="spandanmukherjeegithub@gmail.com" method="post" enctype="text/plain">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -614,15 +614,17 @@
                   <input type="email" class="form-control" name="email" id="email" required>
                 </div>
               </div>
+              <br>
               <div class="form-group">
                 <label for="name">Subject</label>
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
+              <br>
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
-              
+              <br><br>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
