--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -56,7 +56,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Project Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -77,16 +77,16 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
+        <br><br>
         <div class="section-title">
           <h2>About</h2>
           <p>Well at present I am a college student, in this phase I started learning some activities on Python Libraries and AI along with that now a Web Developer and UI/UX Designer. 
-            My college has many clubs which are indeed fascinating learning about it helped me to start my own club named CloudOps which focuses on creating cloud computing skills and developing a individual cloud computing community in the college. I as a Co founder of this club made this possible with 4 other guys and our club is the first and the only one cloud computing club in my college(VIT Chennai).</p>
+            My college has many clubs which are indeed fascinating learning about it helped me to start my own club named CloudOps which focuses on creating cloud computing skills and developing a individual cloud computing community in the college. I as a Co founder of this club made this possible with 4 other guys and our club is the first and the only one cloud computing club in my college(VIT Chennai). At present my current ambition is to learn cloud and full stack web development, along with all that I stay updated with new technology and I learn and upgrade myself,which indeed helps make something or develop something innovative.</p>
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          <div class="col-lg-2" data-aos="fade-right">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" >
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Developer &amp; Innovator.</h3>
