--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -45,7 +45,7 @@
           <a href="https://github.com/SpandanM110" class="google-plus"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/spandan-mukherjee-a78979228/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://twitter.com/Magellanic_Tech" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://medium.com/@spandanmukherjee2003" class="bi-medium"><i class="bx bxl-medium"></i></a>
+          <a href="https://medium.com/@spandanmukherjee2003" class="bi-medium"><i class="bx bxl"></i></a>
           <a href="https://instagram.com/slit_of_sunshine?igshid=ZDdkNTZiNTM=" class="instagram"><i class="bx bxl-instagram"></i></a>
 
         </div>
@@ -535,14 +535,14 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  One of the friendliest person I've ever met. Instantly connected after our first conversation. He's really dedicated with his work and I have hopes from him.
+                  One of the friendliest person I've ever met. Instantly connected after our first conversation. He's really dedicated with his work and I have hopes from him.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Priyanshu Pattanaik</h3>
                 <h4>Web Developer & Innovator</h4>
               </div>
-            </div> -->
+            </div> 
             <!-- End testimonial item
 
             <!-- <div class="swiper-slide">
