--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -543,18 +543,18 @@
                 <h4>Web Developer & Innovator</h4>
               </div>
             </div> 
-            <!-- End testimonial item
+            <!-- End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Spandan is a very innovative person who always loves to learn about new technologies. He is one of my very good friends and people I met. He is very dedicated to his work and if you ask him to do some work. He will never disappoint you. His eagerness to learn always motivates me to grow and advance in my carrier.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Ojas Aklecha</h3>
+                <h4>Web Developer & Designer</h4>
               </div>
             </div> -->
             <!-- End testimonial item -->
