--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -556,7 +556,7 @@
                 <h3>Ojas Aklecha</h3>
                 <h4>Web Developer & Designer</h4>
               </div>
-            </div> -->
+            </div>
             <!-- End testimonial item -->
 
           </div>
