--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Spandan Mukherjee</h1>
-      <p>I'm a <span class="typed" data-typed-items=" Coder,Blogger,Web Developer,UI/UX Designer,Flask and Django Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items=" Web Developer,UI/UX Designer,Blockchain Enthusiast,Tech Blogger,Community Co-Founder"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -80,8 +80,7 @@
         <br><br>
         <div class="section-title">
           <h2>About</h2>
-          <p>Well at present I am a college student, in this phase I started learning some activities on Python Libraries and AI along with that now a Web Developer and UI/UX Designer. 
-            My college has many clubs which are indeed fascinating learning about it helped me to start my own club named CloudOps which focuses on creating cloud computing skills and developing a individual cloud computing community in the college. I as a Co founder of this club made this possible with 4 other guys and our club is the first and the only one cloud computing club in my college(VIT Chennai). At present my current ambition is to learn cloud and full stack web development, along with all that I stay updated with new technology and I learn and upgrade myself,which indeed helps make something or develop something innovative.</p>
+          <p>Introducing myself I am Spandan Mukherjee, a pre-final year CSE undergrad at VIT Chennai. I am a Co-Founder and CEO of D&D, Co-Founder of CloudOps Club VIT'C, and an open-source contributor. With a passion for development and design, I love to contribute as a developer and designer. I am also a Web3 explorer and a technical research intern.</p>
         </div>
 
         <div class="row">
