changes much needed

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -396,7 +396,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Project and Work Gallery</h2>
+          <h2>Project Gallery</h2>
           <p>These are all my projects that were made during the time of hackathons or out self interest. You can have a look to all of my contributions individually or with the team. </p>
         </div>
 <!-- 
@@ -472,7 +472,7 @@
               </div>
             </div>
           </div>
-
+<!-- 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
@@ -481,14 +481,14 @@
                 <a href="portfolio-details6.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Event Management"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details7.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blockchain platform"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details10.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -667,7 +667,7 @@
               <div class="phone">
                 <i class="bi bi-twitter"></i>
                 <h4>Twitter</h4>
-                <p>Magellanic_Tech</p>
+                <p>spandan_twts</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7780.01749351094!2d80.1547265!3d12.8427111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5259a58da799fb%3A0x3bc484d22ce3b472!2sVIT%20UNIVERSITY%2C%20Tamil%20Nadu%20600048!5e0!3m2!1sen!2sin!4v1682804222093!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -676,7 +676,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="spandanmukherjeegithub@gmail.com" method="post" enctype="text/plain">
+            <form onsubmit="sendEmail(); reset(); return false;">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -689,7 +689,7 @@
               </div>
               <br>
               <div class="form-group">
-                <label for="name">Subject</label>
+                <label for="name">Phone Number</label>
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
               <br>
@@ -701,6 +701,23 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
+          <script src="https://smtpjs.com/v3/smtp.js"></script>
+          <script>
+            function sendEmail(){
+              Email.send({
+              Host : "smtp.gmail.com",
+              Username : "spandanmukherjee2003@gmail.com",
+              Password : "Spandan3000",
+              To : 'spandanmukherjeegithub@gmail.com',
+              From : document.getElementById("email").value,
+              Subject : "New Contact form enquiry",
+              Body : "And this is the body"
+          }).then(
+            message => alert(message)
+          );
+            }
+            
+          </script>
 
         </div>
 
