--- a/Portfolio/portfolio-details10.html
+++ b/Portfolio/portfolio-details10.html
@@ -27,13 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -71,6 +64,7 @@
     </div>
   </header><!-- End Header -->
 
+
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
@@ -99,7 +93,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-8.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-10.png" alt="">
                 </div>
 
               </div>
@@ -111,15 +105,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: POSTER Design</li>
-                <li><strong>Design</strong>:Figma and Photoshop</li>
-                <li><strong>Project URL</strong>: <a href="https://www.figma.com/file/VSarDiKJNC3vnh3P3kbzcb/Event-Template?node-id=0%3A1&t=MPbLt1b5YgptghS3-1">https://www.figma.com/file/VSarDiKJNC3vnh3P3kbzcb/Event-Template?node-id=0%3A1&t=MPbLt1b5YgptghS3-1</a></li>
+                <li><strong>Category</strong>: Blockchain</li>
+                <li><strong>Design</strong>:Figma</li>
+                <li><strong>Project URL</strong>: <a href="https://hack-web3-conf3.vercel.app/">https://hack-web3-conf3.vercel.app/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>This is an explanation of the project</h2>
               <p>
-                To start making your Website and to remember the work progress so a UI/UX Design to carry out the project.
+                A platform to fund all the startups.
               </p>
             </div>
           </div>
@@ -134,15 +128,13 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
+     
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by Spandan Mukherjee</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
