--- a/Portfolio/portfolio-details6.html
+++ b/Portfolio/portfolio-details6.html
@@ -51,7 +51,7 @@
       <div class="social-links mt-3 text-center">
         <a href="https://github.com/SpandanM110" class="google-plus"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/spandan-mukherjee-a78979228/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://twitter.com/Magellanic_Tech" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://twitter.com/spandan_twts" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://medium.com/@spandanmukherjee2003" class="bi-medium"><i class="bx bxl-medium"></i></a>
         <a href="https://instagram.com/slit_of_sunshine?igshid=ZDdkNTZiNTM=" class="instagram"><i class="bx bxl-instagram"></i></a>
 
