Full stack update done

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -98,7 +98,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 July 2003</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, Tamil Nadu, India</span></li>
                 </ul>
               </div>
@@ -676,13 +676,16 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex flex-column align-items-stretch">
-            <h3>Welcome to this space where you all can directly contact me. It's a small space where you can meet new people. You can easily text or DM me directly from that space.</h3>
-            <button class="custom-button">
-                Join the Space
-            </button>
-            <br>
+            <h3>Welcome to this space where you all can directly contact me. It's a small Discord space where you can meet new people and have discussions. You can easily text or DM me directly from that space or even on Telegram.</h3>
+            <a href="https://discord.gg/fEHX7UFE">
+              <button class="custom-button">Join the Space</button>
+            </a>
             <p align="center"> OR </p>
-            <h3>If you are viewing on a PC or a Laptop, just scan the QR code to join the space.</h3>
+            <a href="https://t.me/SpandanM110">
+              <button class="custom-button1">Connect with me in Telegram</button>
+            </a>
+            <p align="center"> OR </p>
+            <h3>If you are viewing on a PC or a Laptop, just scan the QR code to join the Discord space.</h3>
             <img src="assets/img/connect.png" alt="QR Code" class="qr-code">
         </div>
       </div>
